Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-18935

Lustre nodemap ranges do not work with KFI

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • Lustre 2.17.0
    • None
    • None
    • 3
    • 9223372036854775807

    Description

      Lustre nodemap ranges do not work with KFI as shown below

      [root@mchstor2n02 ~]# lctl nodemap_add_range --name alps --range [1-131071]@kfi
      [root@mchstor2n02 ~]# lctl get_param nodemap.alps.ranges
      nodemap.alps.ranges=
      [

      { id: 8, start_nid: 1@kfi, end_nid: 1@kfi }

      ,

      { id: 7, start_nid: 0@kfi, end_nid: 0@kfi }

      ]

      Attachments

        Activity

          People

            rajeevm Rajeev Mishra
            rajeevm Rajeev Mishra
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: